--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,5 @@
-# This file lists all individuals having contributed content to the repository.
+# This file lists all individuals having contributed content to the repo
+##
 
-MJ Johnson <61@holbertonschool.com>
-David John Coleman II <djc_fileno@davidjohncoleman.com>
-Kimberly Wong <kjowong@gmail.com>
-Carrie Ybay
-Jared Heck
+vincent otis <https://github.com/otis-ke>
+maryanne mweru <https://github.com/mmweru> 
